--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "Phi Zeroth",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "request": "^2.88.0"
+    "express": "^4.16.4"
   }
 }
