--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Thingamajigger for the Weathermabob",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,8 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4"
+  },
+  "engines": {
+    "node": "8.10.x"
   }
 }
